--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             </section>
             <section>
                 <h3>Scope definitions</h3>
-                <p style="color: red">TODO insert scope diagram</p>
+                <img src="https://gitlab.tandashi.de/GameBase/documentation/-/raw/master/requirements/diagramms/Use_Case_Diagramm.png" height="500px">
             </section>
         </section>
 
@@ -227,7 +227,8 @@
             <section>
                 <h2 class="heading-overview">Quality</h2>
                 <small>How do we provide QA?</small>
-                <p style="color: red">Add improovements through Blog comments, risk management, Design Patterns, Code metricts (?))</p>
+                <p style="color: red">Add improovements through Blog comments, risk management, Design Patterns, Code
+                    metricts (?))</p>
             </section>
             <section>
                 <h4>Cucumber .feature tests (E2E)</h4>
@@ -235,15 +236,12 @@
             </section>
             <section>
                 <h4>Karma browser tests</h4>
-                <img src="img/Testing-Frontend-karma.png" alt="Karma tests" style="width: 100%">
+                <img src="img/Testing-Frontend-karma.png" alt="Karma tests" style="height: 100%">
             </section>
-        </section>
 
-        <section>
             <section>
-                <h2 class="heading-overview">CI/CD</h2>
+                <h2>CI/CD</h2>
                 <small>GitLab CI and their runners</small>
-                <p style="color: red">Move to Quality - Automation</p>
             </section>
             <section>
                 <h4>CI/CD Workflow</h4>
