--- a/index.html
+++ b/index.html
@@ -150,7 +150,6 @@
             <section class="center">
                 <h2 class="heading-overview">Technologies</h2>
                 <small>How will we achieve our vision?</small>
-                <p style="color: red">TODO include YouTrack and Gitlab and shit here as Tech Stack</p>
             </section>
             <section>
                 <h3>Angular & Nebular</h3>
@@ -182,11 +181,13 @@
                 </ul>
             </section>
             <section>
-                <h3>Postgres</h3>
-                <img src="img/postgres.svg" alt="postgres-logo" style="height: 100px; margin: 0; box-shadow: none;"><br>
-                <ul>
-                    <li>Database system</li>
-                </ul>
+                <h3>Tech Stack</h3>
+                <div>
+                    <img src="img/YouTrack.png" height="100">
+                    <img src="img/GitLabLogo.png" height="100"><br>
+                    <img src="img/WebStorm-logo.png" height="100">
+                    <img src="img/eclipse-logo.png" height="100">
+                </div>
             </section>
         </section>
 
