update more images

--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@
             </section>
             <section>
                 <h3>Scope definitions</h3>
-                <img src="https://gitlab.tandashi.de/GameBase/documentation/-/raw/master/requirements/diagramms/Use_Case_Diagramm.png" height="500px">
+                <img src="https://gitlab.tandashi.de/GameBase/documentation/-/raw/master/requirements/diagramms/Use_Case_Diagramm.png"
+                     height="500px">
             </section>
         </section>
 
@@ -195,27 +196,38 @@
             <section>
                 <h2 class="heading-overview">Project Management</h2>
                 <img alt="youtrack icon" src="img/YouTrack.png" style="width: 100px; margin: 0; box-shadow: none;"><br>
-                <p style="color: red">Adapt to GC (Burndowns, Comulative Flow, Time Spent, Function Points)</p>
+                <p style="color: red">Adapt to GC (Burndowns)</p>
             </section>
 
             <section>
                 <h3>Organize our tasks</h3>
-                <img alt="Youtrack tasklist" src="img/YouTrack-issues_dark.png" style="width: 100%;">
+                <img alt="Youtrack tasklist" src="img/YouTrack-issues_dark.png" height="500">
             </section>
 
-            <section data-transition="slide-in fade-out" data-vertical-align-top="true">
-                <h3 style="float: left; margin-left: 20px">Sprints - Board</h3>
-                <img alt="Youtrack sprint board" src="img/YouTrack-board.png" style="width: 100%;">
-            </section>
-
-            <section data-transition="fade-in slide-out" data-vertical-align-top="true">
+            <section>
                 <h3 style="float: left; margin-left: 20px">Sprints - Burndown</h3>
+                <p style="color: red">CHANGE</p>
                 <img alt="Youtrack sprint burndown" src="img/YouTrack-burndown.png" style="width: 100%;">
             </section>
 
             <section>
                 <h3>Cumulative Flow</h3>
                 <img alt="Youtrack cumulative flow" src="img/YouTrack-cumulative.png" style="width: 100%;">
+            </section>
+
+            <section>
+                <h3>Time spent</h3>
+                <img alt="Youtrack time spent" src="img/YouTrack-time_spent.png" style="width: 100%;">
+            </section>
+
+            <section>
+                <h3>Time Esitmation</h3>
+                <img src="img/FP-time_estimation.png" height="500">
+            </section>
+
+            <section>
+                <h3>Real times</h3>
+                <img src="img/FP-real-times.png" height="500">
             </section>
 
             <section>
@@ -228,7 +240,7 @@
             <section>
                 <h2 class="heading-overview">Quality</h2>
                 <small>How do we provide QA?</small>
-                <p style="color: red">Add improovements through Blog comments, risk management, Design Patterns, Code
+                <p style="color: red">Add improvements through Blog comments, risk management, Design Patterns, Code
                     metricts (?))</p>
             </section>
             <section>
