--- a/index.html
+++ b/index.html
@@ -240,8 +240,6 @@
             <section>
                 <h2 class="heading-overview">Quality</h2>
                 <small>How do we provide QA?</small>
-                <p style="color: red">Add improvements through Blog comments, risk management, Design Patterns, Code
-                    metricts (?))</p>
             </section>
             <section>
                 <h4>Cucumber .feature tests (E2E)</h4>
@@ -250,6 +248,34 @@
             <section>
                 <h4>Karma browser tests</h4>
                 <img src="img/Testing-Frontend-karma.png" alt="Karma tests" style="height: 100%">
+            </section>
+
+            <section>
+                <h4>The Software Engineering class</h4>
+                <ul>
+                    <li>Blog post comments</li>
+                    <li>"Influences" by other group's implementations</li>
+                </ul>
+            </section>
+
+            <section>
+                <h4>Risk Management</h4>
+                <img src="img/risk_management.png">
+            </section>
+
+            <section>
+                <h2>Design Patterns</h2>
+                <small>Improving quality with structure</small>
+            </section>
+
+            <section data-transition="slide-in fade-out">
+                <h4>Code Metrics - Before design pattern</h4>
+                <img src="img/Cognitive-Complexity_cropped.png">
+            </section>
+
+            <section data-transition="fade-in slide-out">
+                <h4>Code Metrics - After design pattern</h4>
+                <img src="img/Cognitive-Complexity-after.png">
             </section>
 
             <section>
@@ -279,7 +305,7 @@
                 <p style="color: red">Do we have some kind of class diagram?</p>
             </section>
             <section>
-                <h2 class="heading-overview">Live Demo</h2>
+                <h2 class="heading-overview">Live Demo (Video)</h2>
             </section>
         </section>
 
