--- a/index.html
+++ b/index.html
@@ -307,6 +307,11 @@
             <section>
                 <h2 class="heading-overview">Live Demo (Video)</h2>
             </section>
+            <section>
+                <video controls>
+                    <source src="https://gitlab.tandashi.de/GameBase/midterm-presentation/-/raw/master/demo/Gamebase%20Demo%20Final.mkv" type="video/mp4">
+                </video>
+            </section>
         </section>
 
         <section class="no-heading-overview">
