remove wrong heading-overview

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             </section>
 
             <section>
-                <h3 class="heading-overview">Architecture</h3>
+                <h3>Architecture</h3>
                 <img src="img/architecture.png" alt="Architecture diagram" style="width: 75%">
             </section>
         </section>
