--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             </section>
             <section>
                 <h3>The &ldquo;slogan&rdquo;</h3>
-                <blockquote>&ldquo;Setting up game servers can be painful&rdquo;</blockquote>
+                <blockquote>&ldquo;Setting up game server shouldn't be a hassle&rdquo;</blockquote>
             </section>
             <section>
                 <h3>Actual goals</h3>
