--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                     <img src="img/YouTrack.png" height="100">
                     <img src="img/GitLabLogo.png" height="100"><br>
                     <img src="img/WebStorm-logo.png" height="100">
-                    <img src="img/eclipse-logo.png" height="100">
+                    <img src="img/goland-logo.png" height="100">
                 </div>
             </section>
         </section>
